@@ -6,7 +6,7 @@ package SPVM::Net::SSLeay::Error;
 
 =head1 Name
 
-SPVM::Net::SSLeay::Error - Short Description
+SPVM::Net::SSLeay::Error - OpenSSL Error
 
 =head1 Description
 
@@ -15,10 +15,6 @@ Net::SSLeay::Error class in L<SPVM> represents an OpenSSL error.
 =head1 Usage
 
   use Net::SSLeay::Error;
-
-=head1 Author
-
-Yuki Kimoto C<kimoto.yuki@gmail.com>
 
 =head1 Copyright & License
 
