@@ -1,0 +1,24 @@
+package SPVM::Net::SSLeay::Error::Operation;
+
+
+
+1;
+
+=head1 Name
+
+SPVM::Net::SSLeay::Error::Operation - OpenSSL Operation Error
+
+=head1 Description
+
+Net::SSLeay::Error::Operation class in L<SPVM> represents an OpenSSL operation error.
+
+=head1 Usage
+
+  use Net::SSLeay::Error::Operation;
+
+=head1 Copyright & License
+
+Copyright (c) 2024 Yuki Kimoto
+
+MIT License
+
